--- a/BePartner_App_Mid/Views/AD_Home/All_Admin.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/All_Admin.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "All_Admin";
 }
 @{
-    Layout = "~/Views/Shared/_AD_Layout.cshtml";
+    Layout = "~/Views/AD_Home/_AD_Layout.cshtml";
 }
-<div class="d-sm-flex justify-content-between mb-4" >
+<div class="d-sm-flex justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Admin</h1>
     <form class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
         <div class="input-group">
@@ -23,7 +23,7 @@
 
 <div class="card shadow mb-4">
     <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
-         
+
         <h6 class="m-0 font-weight-bold text-primary">Admin list</h6>
 
         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
@@ -35,27 +35,34 @@
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>NID</th>
+                        <th>Security key</th>
+                        <th>Gender</th>
+                        <th>Address</th>
                     </tr>
                 </thead>
-
+               
                 <tbody>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                        <td>$320,800</td>
-                    </tr>
+                    @foreach (var AD in Model)
+                    {
+                        <tr>
+                            <td>@AD.FirstName</td>
+                            <td>@AD.LastName</td>
+                            <td>@AD.Ad_Email</td>
+                            <td>@AD.Phone</td>
+                            <td>@AD.Nid</td>
+                            <td>@AD.Security_key</td>
+                            <td>@AD.Gender</td>
+                            <td>@AD.Address</td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </div>
-        </div>
     </div>
+</div>
 
