--- a/BePartner_App_Mid/Views/AD_Home/All_Entrepreneur.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/All_Entrepreneur.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "All_Entrepreneur";
 }
 @{
-    Layout = "~/Views/Shared/_AD_Layout.cshtml";
+    Layout = "~/Views/AD_Home/_AD_Layout.cshtml";
 }
 <div class="d-sm-flex sa_align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Entrepreneur</h1>
@@ -36,24 +36,31 @@
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>NID</th>
+                        <th>Occupation</th>
+                        <th>Gender</th>
+                        <th>Address</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                        <td>$320,800</td>
-                    </tr>
+                    @foreach (var EN in Model)
+                    {
+                        <tr>
+                            <td>@EN.FirstName</td>
+                            <td>@EN.LastName</td>
+                            <td>@EN.En_Email</td>
+                            <td>@EN.Phone</td>
+                            <td>@EN.Nid</td>
+                            <td>@EN.Occupation</td>
+                            <td>@EN.Gender</td>
+                            <td>@EN.Address</td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </div>
