--- a/BePartner_App_Mid/Views/AD_Home/All_Investor.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/All_Investor.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "All_Investor";
 }
 @{
-    Layout = "~/Views/Shared/_AD_Layout.cshtml";
+    Layout = "~/Views/AD_Home/_AD_Layout.cshtml";
 }
 <div class="d-sm-flex sa_align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Investor</h1>
@@ -36,24 +36,35 @@
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>NID</th>
+                        <th>Organization</th>
+                        <th>TIN</th>
+                        <th>Website</th>
+                        <th>Account Status</th>
+                        <th>Address</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                        <td>$320,800</td>
-                    </tr>
+                    @foreach (var IN in Model)
+                    {
+                        <tr>
+                            <td>@IN.FirstName</td>
+                            <td>@IN.LastName</td>
+                            <td>@IN.In_Email</td>
+                            <td>@IN.Phone</td>
+                            <td>@IN.Nid</td>
+                            <td>@IN.OrgName</td>
+                            <td>@IN.Tin</td>
+                            <td>@IN.OrgSite</td>
+                            <td>@IN.Status</td>
+                            <td>@IN.OrgLocation</td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </div>
