--- a/BePartner_App_Mid/Views/S_Admin/Regstration_S1.cshtml
+++ b/BePartner_App_Mid/Views/S_Admin/Regstration_S1.cshtml
@@ -21,31 +21,35 @@
                             </center>
 
                             <div class="card-body p-md-5 text-black">
-                                <form action="" method="post">
+                                <form action="" method="post" enctype="multipart/form-data">
                                     <div class="row">
                                         <div class="col-md-6 mb-4">
                                             <div class="form-outline">
                                                 <label class="form-label" for="form3Example1m">First name:</label>
-                                                <input type="text" name="FirstName" placeholder="First name" id="form3Example1m" class="form-control" />
+                                                <span class="text-danger">@Html.ValidationMessage("FirstName")</span>
+                                                <input type="text" name="FirstName" value="@(Model!=null? Model.FirstName:"")" placeholder="First name" id="form3Example1m" class="form-control" />
                                             </div>
                                         </div>
 
                                         <div class="col-md-6 mb-4">
                                             <div class="form-outline">
                                                 <label class="form-label" for="form3Example1n">Last name:</label>
-                                                <input type="text" name="LastName" placeholder="Last name" id="form3Example1n" class="form-control" />
+                                                <span class="text-danger">@Html.ValidationMessage("LastName")</span>
+                                                <input type="text" name="LastName" value="@(Model!=null? Model.LastName:"")" placeholder="Last name" id="form3Example1n" class="form-control" />
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example8">Email:</label>
-                                        <input type="text" name="Email" placeholder="example@bepartner.com" id="form3Example8" class="form-control" />
+                                        <span class="text-danger">@Html.ValidationMessage("Email")</span>
+                                        <input type="text" name="Email" value="@(Model!=null? Model.Email:"")" placeholder="example@bepartner.com" id="form3Example8" class="form-control" />
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example8">Phone:</label>
-                                        <input type="text" name="Phone" placeholder="01772994093" id="form3Example8" class="form-control" />
+                                        <span class="text-danger">@Html.ValidationMessage("Phone")</span>
+                                        <input type="text" name="Phone" value="@(Model!=null? Model.Phone:"")" placeholder="01772994093" id="form3Example8" class="form-control" />
                                     </div>
 
                                     <div class="d-md-flex justify-content-start align-items-center mb-4 py-2">
@@ -53,34 +57,36 @@
                                         <label class="form-check-label">Gender:&ensp;  </label>
 
                                         <div class="form-check form-check-inline mb-0 me-4">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="femaleGender"
-                                                   value="option1" />
-                                            <label class="form-check-label" for="femaleGender">Female</label>
+                                            <input class="form-check-input" type="radio" name="Gender" id="maleGender"
+                                                   value="Male" />
+                                            <label class="form-check-label" for="femaleGender">Male</label>
                                         </div>
 
                                         <div class="form-check form-check-inline mb-0 me-4">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="maleGender"
-                                                   value="option2" />
-                                            <label class="form-check-label" for="maleGender">Male</label>
+                                            <input class="form-check-input" type="radio" name="Gender" id="femaleGender"
+                                                   value="Female" />
+                                            <label class="form-check-label" for="maleGender">Female</label>
                                         </div>
 
                                         <div class="form-check form-check-inline mb-0">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="otherGender"
-                                                   value="option3" />
+                                            <input class="form-check-input" type="radio" name="Gender" id="otherGender"
+                                                   value="Other" />
                                             <label class="form-check-label" for="otherGender">Other</label>
                                         </div>
-
+                                        <span class="text-danger">@Html.ValidationMessage("Gender")</span>
                                     </div>
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example8">NID:</label>
-                                        <input type="text" name="NID" placeholder="3333 111 222" id="form3Example8" class="form-control" />
+                                        <span class="text-danger">@Html.ValidationMessage("NID")</span>
+                                        <input type="text" name="NID" value="@(Model!=null? Model.NID:"")" placeholder="3333 111 222" id="form3Example8" class="form-control" />
                                     </div>
 
 
                                     <div class="form-outline mb-4">
                                         <label class="form-label" for="form3Example8">Address:</label>
-                                        <input type="text" name="Address" placeholder="Address" id="form3Example8" class="form-control" />
+                                        <span class="text-danger">@Html.ValidationMessage("Address")</span>
+                                        <input type="text" name="Address" value="@(Model!=null? Model.Address:"")" placeholder="Address" id="form3Example8" class="form-control" />
                                     </div>
                                     <div class="form-outline mb-4">
                                         <center>
