--- a/BePartner_App_Mid/Content/InProfileStyle.css
+++ b/BePartner_App_Mid/Content/InProfileStyle.css
@@ -22,6 +22,7 @@ body {
 
 .tab-content {
     flex: 1;
+    height:200px;
 }
 
 .form-group {
@@ -44,4 +45,8 @@ body {
     width: 100px;
     border-radius: 100%;
     border: 5px solid #fff;
+}
+
+.list-body{
+    height:200px;
 }
