--- a/BePartner_App_Mid/Views/AD_Home/Account.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/Account.cshtml
@@ -72,7 +72,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="form-outline">
                         <label class="form-label" for="form3Example1m">DOB:</label>
-                        <input type="date" name="DOB" value="@(Model!=null? Model.Dob:"")" id="form3Example1m" class="form-control" />
+                        <input type="datetime" name="DOB" value="@(Model!=null? Model.Dob:"")" id="form3Example1m" class="form-control" />
                     </div>
                 </div>
 
