--- a/BePartner_App_Mid/Views/AD_Home/_AD_Layout.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/_AD_Layout.cshtml
@@ -70,7 +70,7 @@
             <!-- Nav Item - Pages Messages Menu -->
             <li class="nav-item">
 
-                <a class="nav-link" href="@Url.Action("AD_Settings","AD_Home")">
+                <a class="nav-link" href="@Url.Action("AD_Messege","AD_Home")">
                     <i class="fas fa-fw fas fa-envelope"></i>
                     <span>Messages </span>
                 </a>
@@ -131,7 +131,7 @@
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="@Url.Action("AD_Chart","AD_Home")">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Charts</span>
                 </a>
@@ -158,7 +158,7 @@
 
             <!-- Nav Item - log out -->
             <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("login_S","S_Admin")">
+                <a class="nav-link" href="@Url.Action("Logout","AD_Home")">
                     <i class="fas fa-sign-out-alt"></i>
                     <span>Logout</span>
                 </a>
