--- a/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
@@ -64,24 +64,35 @@
             <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Email</th>
+                        <th>Phone</th>
+                        <th>NID</th>
+                        <th>Organization</th>
+                        <th>TIN</th>
+                        <th>Website</th>
+                        <th>Address</th>
+                        <th>Account Status</th>
                     </tr>
                 </thead>
 
                 <tbody>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                        <td>$320,800</td>
-                    </tr>
+                    @foreach (var IN in Model)
+                    {
+                        <tr>
+                            <td>@IN.FirstName</td>
+                            <td>@IN.LastName</td>
+                            <td>@IN.In_Email</td>
+                            <td>@IN.Phone</td>
+                            <td>@IN.Nid</td>
+                            <td>@IN.OrgName</td>
+                            <td>@IN.Tin</td>
+                            <td>@IN.OrgSite</td>
+                            <td>@IN.OrgLocation</td>
+                            <td><input type="Submit" value="Active" class="btn btn-success"></td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </div>
@@ -92,7 +103,7 @@
 <!-- new Entrepreneurs section start -->
 <div class="card shadow mb-4">
     <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
-        <h6 class="m-0 font-weight-bold text-primary">New Investors</h6>
+        <h6 class="m-0 font-weight-bold text-primary">New Enterpreneurs</h6>
 
         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
             <i class="fas fa-download fa-sm text-white-50"></i> Download
