--- a/BePartner_App_Mid/Views/AD_Home/AD_Settings.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Settings.cshtml
@@ -27,26 +27,35 @@
                             <h3 style="color:black;">Reset Password</h3>
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="form3Example8">Old Password:</label>
-                                <input type="text" name="Old_Password:" placeholder="********" id="form3Example8" class="form-control" />
+                                <span class="text-danger">@Html.ValidationMessage("Old_Password")</span>
+                                <input type="text" name="Old_Password" value="@(Model!=null? Model.Old_Password:"")" placeholder="********" id="form3Example8" class="form-control" />
                             </div>
-
                             <div class="form-outline mb-4">
-                                <label class="form-label" for="form3Example8">New Password:</label>
-                                <input type="text" name="New_Password" placeholder="********" id="form3Example8" class="form-control" />
+                                <label class="form-label" for="form3Example8">Password:</label>
+                                <span class="text-danger">@Html.ValidationMessage("Password")</span>
+                                <input type="text" name="Password" value="@(Model!=null? Model.Password:"")" placeholder="Password" id="form3Example8" class="form-control" />
                             </div>
 
                             <div class="form-outline mb-4">
                                 <label class="form-label" for="form3Example8">Confirm Password:</label>
-                                <input type="text" name="Confirm_Password" placeholder="********" id="form3Example8" class="form-control" />
+                                <span class="text-danger">@Html.ValidationMessage("ConfirmPassword")</span>
+                                <input type="text" name="ConfirmPassword" value="@(Model!=null? Model.ConfirmPassword:"")" placeholder="Confirm Password" id="form3Example8" class="form-control" />
                             </div>
 
                             <input type="Submit" value="Change Password" class="btn btn-success ad-reg-button ">
 
                         </form>
+                        <br />
+                        <center><h5 class="text-success">@ViewBag.APM_G</h5></center>
+                        <center><h5 class="text-danger">@ViewBag.APM_R</h5></center>
                     </div>
+
                 </div>
+
             </div>
+
         </div>
+
     </div>
 </div>
 
