--- a/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
@@ -78,21 +78,14 @@
                 </thead>
 
                 <tbody>
-                    @foreach (var IN in Model)
-                    {
-                        <tr>
-                            <td>@IN.FirstName</td>
-                            <td>@IN.LastName</td>
-                            <td>@IN.In_Email</td>
-                            <td>@IN.Phone</td>
-                            <td>@IN.Nid</td>
-                            <td>@IN.OrgName</td>
-                            <td>@IN.Tin</td>
-                            <td>@IN.OrgSite</td>
-                            <td>@IN.OrgLocation</td>
-                            <td><input type="Submit" value="Active" class="btn btn-success"></td>
-                        </tr>
-                    }
+                    <tr>
+                        <td>Tiger Nixon</td>
+                        <td>System Architect</td>
+                        <td>Edinburgh</td>
+                        <td>61</td>
+                        <td>2011/04/25</td>
+                        <td>$320,800</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
@@ -111,29 +104,34 @@
     </div>
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Position</th>
-                        <th>Office</th>
-                        <th>Age</th>
-                        <th>Start date</th>
-                        <th>Salary</th>
-                    </tr>
-                </thead>
+            <thead>
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                    <th>NID</th>
+                    <th>Occupation</th>
+                    <th>Gender</th>
+                    <th>Address</th>
+                </tr>
+            </thead>
 
-                <tbody>
+            <tbody>
+                @foreach (var EN in ViewBag.M_ENS)
+                {
                     <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                        <td>$320,800</td>
+                        <td>@EN.FirstName</td>
+                        <td>@EN.LastName</td>
+                        <td>@EN.En_Email</td>
+                        <td>@EN.Phone</td>
+                        <td>@EN.Nid</td>
+                        <td>@EN.Occupation</td>
+                        <td>@EN.Gender</td>
+                        <td>@EN.Address</td>
                     </tr>
-                </tbody>
-            </table>
+                }
+            </tbody>
         </div>
     </div>
 </div>
