--- a/BePartner_App_Mid/Views/Home/About.cshtml
+++ b/BePartner_App_Mid/Views/Home/About.cshtml
@@ -58,9 +58,11 @@
 
     <hr>
 
-    <a href="sign_in_employee.php"><h2>Employee</h2></a>
+    <a class="nav-link" href="@Url.Action("SignIn","Employee")">
+        <h3>Employee</h3>
+    </a>
 
-    <p><b>Sazzad Hamid</b> <small>  Chief Operating Officer (COO)</small></p>
+       <p><b>Sazzad Hamid</b> <small>  Chief Operating Officer (COO)</small></p>
     <p>
         In the hierarchal set up the Chief Operating Officer holds the second place. In some entities, COO is also called the Chief Operations Director or Chief Operations Officer.  COO acts as focal point to execute business plans. Such person assists the company to work effectively and ensures its financial strength. COO is a leader as well as a supervisor of the company, who confirms that employees are executing the plans of the CEO.
     </p>
