--- a/BePartner_App_Mid/Views/Shared/_Layout.cshtml
+++ b/BePartner_App_Mid/Views/Shared/_Layout.cshtml
@@ -50,6 +50,13 @@
                     </li>
 
                     <li class="nav-item">
+                        <a class="nav-link" href="@Url.Action("About","Home")">
+                            <i class="fas fa-fw fas fa fa-user"></i>
+                            <span>About</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Blog","Home")">
                             <i class="fas fa-fw fas fa-blog"></i>
                             <span>Blog</span>
@@ -74,8 +81,7 @@
                         <a class="nav-link" href="@Url.Action("InLogin","Investor")">
                             <span>Log In</span>
                         </a>
-                    </li>
-
+                   
                     <li class="nav-item">
                         <a class="nav-link" href="@Url.Action("Registration","Investor")">
                             <input type="Submit" value="Join" class="btn btn-outline-success ad-reg-button-log">
