--- a/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Notification.cshtml
@@ -78,14 +78,21 @@
                 </thead>
 
                 <tbody>
-                    <tr>
-                        <td>Tiger Nixon</td>
-                        <td>System Architect</td>
-                        <td>Edinburgh</td>
-                        <td>61</td>
-                        <td>2011/04/25</td>
-                        <td>$320,800</td>
-                    </tr>
+                    @foreach (var IN in Model)
+                    {
+                        <tr>
+                            <td>@IN.FirstName</td>
+                            <td>@IN.LastName</td>
+                            <td>@IN.In_Email</td>
+                            <td>@IN.Phone</td>
+                            <td>@IN.Nid</td>
+                            <td>@IN.OrgName</td>
+                            <td>@IN.Tin</td>
+                            <td>@IN.OrgSite</td>
+                            <td>@IN.OrgLocation</td>
+                            <td><input type="Submit" value="Active" class="btn btn-success"></td>
+                        </tr>
+                    }
                 </tbody>
             </table>
         </div>
@@ -118,19 +125,16 @@
             </thead>
 
             <tbody>
-                @foreach (var EN in ViewBag.M_ENS)
-                {
-                    <tr>
-                        <td>@EN.FirstName</td>
-                        <td>@EN.LastName</td>
-                        <td>@EN.En_Email</td>
-                        <td>@EN.Phone</td>
-                        <td>@EN.Nid</td>
-                        <td>@EN.Occupation</td>
-                        <td>@EN.Gender</td>
-                        <td>@EN.Address</td>
-                    </tr>
-                }
+                <tr>
+                    <th>First Name</th>
+                    <th>Last Name</th>
+                    <th>Email</th>
+                    <th>Phone</th>
+                    <th>NID</th>
+                    <th>Occupation</th>
+                    <th>Gender</th>
+                    <th>Address</th>
+                </tr>
             </tbody>
         </div>
     </div>
